[package]
name = "path-extra"
version = "0.0.0"
edition = "2024"
description = "Extra traits for path and fs with support for std and tokio."
repository = "https://github.com/shian15810/path-extra"
license = "MIT OR Apache-2.0"
keywords = ["ext", "file", "fs", "path", "trait"]
categories = ["rust-patterns"]

[dependencies]
pathdiff = "0.2.3"
tokio = { version = "1.52.3", features = ["fs", "io-util"], optional = true }
trait-variant = { version = "0.1.2", optional = true }

[features]
tokio = ["dep:tokio", "dep:trait-variant"]
